newest version with part 3.1.3

--- a/lab_1.ipynb
+++ b/lab_1.ipynb
@@ -9,7 +9,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display, clear_output"
    ]
   },
   {
@@ -48,7 +49,30 @@
    "source": [
     "def plot_boundary(W):\n",
     "    t=np.linspace(-3,3)\n",
-    "    plt.plot(t,((W[0]*t+W[2])/W[1]))"
+    "    plt.plot(t,((W[0]*t+W[2])/W[1]))\n",
+    "def plot_points_and_boundary(classA, classB, w):\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    ax.scatter(classA[:, 0], classA[:, 1])\n",
+    "    ax.scatter(classB[:, 0], classB[:, 1])\n",
+    "\n",
+    "    # plot decision boundary\n",
+    "    X = np.vstack((classA, classB))\n",
+    "\n",
+    "    plot_min = np.min(X, axis=0)\n",
+    "    plot_max = np.max(X, axis=0)\n",
+    "\n",
+    "    ax.set_xlim([plot_min[0], plot_max[0]])\n",
+    "    ax.set_ylim([plot_min[1], plot_max[0]])\n",
+    "\n",
+    "    x = np.linspace(-5, 5, 100)\n",
+    "    y = (w[0] * x + w[2])/w[1]\n",
+    "    ax.plot(x, y, 'r')\n",
+    "\n",
+    "\n",
+    "    display(fig)\n",
+    "    clear_output(wait = True)"
    ]
   },
   {
@@ -126,9 +150,7 @@
     "        W_delta_seq = delta_seq(data,target,W_delta_seq,lr)\n",
     "        W_perceptron_seq = perceptron_seq(data,target,W_perceptron_seq,lr)\n",
     "        W_delta_batch = delta_batch(data,target,W_delta_batch,lr)\n",
-    "        \n",
-    "        next_output=np.matmul(data,new_weight)\n",
-    "        output_w=delta_sequent(epochs,data,target,W)"
+    "        \n"
    ]
   },
   {
